# dskube

./: .gitignore  CHANGELOG.md  MISSING_FEATURES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml
docs/: plan-check-report.md  release-checklist.md  uiux-report.md
landing/: package-lock.json  package.json  server.js
landing/public/: index.html
scripts/: build-macos.sh
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: config_cmd.rs  crd_cmd.rs  events_cmd.rs  exec_cmd.rs  log_cmd.rs  mod.rs  portforward_cmd.rs  rbac_cmd.rs  resource_cmd.rs
src-tauri/src/k8s/: client.rs  config.rs  crd.rs  logs.rs  mod.rs  resources.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  Onboarding.test.tsx  Onboarding.tsx
src/components/Events/: EventsViewer.test.tsx  EventsViewer.tsx
src/components/LogViewer/: LogViewer.test.tsx  LogViewer.tsx
src/components/Panel/: ListView.tsx  (+5 more)
src/hooks/: useCrdResources.ts  useCrds.test.ts  useCrds.ts  useExec.test.ts  useExec.ts  useLogs.test.ts  useLogs.ts  usePortForward.test.ts  usePortForward.ts  useRbac.test.ts  useRbac.ts  useResources.test.ts  useResources.ts
src/store/: clusterStore.test.ts  clusterStore.ts  panelStore.test.ts  panelStore.ts  resourceStore.test.ts  resourceStore.ts
src/types/: k8s.ts
src/utils/: formatAge.ts
status-server/: package-lock.json  package.json  server.js
(+10 files in other folders)
